@@ -17,6 +17,7 @@
         - Introduce start-with-backend command via plugin. (diewald)
         - Update Mojolicious for security reasons. (diewald)
         - Fix terser installation (fixes #182). (diewald)
+        - Improve security of OAuth redirects. (diewald)
 
         WARNING: Mojolicious 9.31 is a security update -
           updating is highly recommended.
